--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Kenny Yeung</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="images/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather|Monsterrat|Sacramento" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
+
 </head>
 
 <body>
@@ -22,16 +23,16 @@
     <div class="profile">
       <img src="images/kenny.png" alt="kenny-img" height = "200px" width = "200px">
       <h2>Hello.</h2>
-      <p class = "bio">I am a graduated student of the University of Auckland, majoring in Computer Science.</p>
+      <p class = "bio">I am a graduated student of the University of Auckland, majoring in Computer Science. Welcome to my portfolio</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="computer" src="images/computer.png" alt="computer-img" >
-        <h3>Devlopement</h3>
+        <h3>Development</h3>
         <p class = "code-skill-description">I started coding when I developed a passion for computers. I have learned a variety of programming languages that
-        put me in a position to develop websites.</p>
+        put me in a position to develop websites. <a href = "portfolio.html">Check out my coding projects! </a></p>
       </div>
       <div class="skill-row">
         <img class="cube" src="images/cube.png" alt="cube-img by DinosoftLabs" title = "by DinosoftLabs">
@@ -54,7 +55,6 @@
     <a class="footer-link" href="https://www.instagram.com/kenny_deshen/">Instagram</a>
     <p class = "copyright">© 2021 Kenny Yeung.</p>
   </div>
-
 </body>
 
 </html>
