Updated portfolio html
Corrected image paths

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 
         <div class="col-md-4 hover-card" onclick="openProject('https://kenny-yeung.github.io/TinDog/')">
           <div class="card mb-4 shadow-sm">
-            <img src="images/tindog.png" alt="picture of tindog">
+            <img src="images/tindog.PNG" alt="picture of tindog">
             <div class="card-body">
               <p class="card-text">Tindog! Tinder for your dog! This is a design template made for "tindog". The website has simple
               HTML, CSS, and Bootstrap.</p>
@@ -70,7 +70,7 @@
 
         <div class="col-md-4 hover-card" onclick="openProject('https://0cpm8.csb.app/')">
           <div class="card mb-4 shadow-sm">
-            <img src="images/emojipedia.png" alt="">
+            <img src="images/emojipedia.PNG" alt="Picture of emojipedia">
             <div class="card-body">
               <p class="card-text">This is an Emoji Dictionary! It defines some commonly used emojis (or my understanding of the emoji). It was created on Code Sandbox. It uses ReactJS; Mapping data to components</p>
             </div>
@@ -79,7 +79,7 @@
 
         <div class="col-md-4 hover-card" onclick="openProject('https://kenny-yeung.github.io/Simon-Game/')">
           <div class="card mb-4 shadow-sm">
-            <img src="images/simongame.png" alt="">
+            <img src="images/simongame.PNG" alt="Picture of Simon game">
             <div class="card-body">
               <p class="card-text">The Simon game is like "BopIt!" you follow the sequence that is played. Every level will have a new sound, and you have to remember the sequence of the previous levels too!</p>
             </div>
