--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
 
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img src="images/blog.png" alt="Picture of blog">
+            <img src="images/blog.PNG" alt="Picture of blog">
             <div class="card-body">
               <p class="card-text">Simple blog web app that is connected to my MongoDB Atlas database. I use it to log my Speedcubing progression.
               Currently it is not deployed, but will be in the future, stay tuned!</p>
@@ -61,7 +61,7 @@
 
         <div class="col-md-4 hover-card" onclick="openProject('https://kenny-yeung.github.io/DrumkitTouch/')">
           <div class="card mb-4 shadow-sm">
-            <img src="images/drumkit.png" alt="">
+            <img src="images/drumkit.png" alt="Picture of DrumKit">
             <div class="card-body">
               <p class="card-text">This is a frontend project that uses Javascript DOM to play the sound of a drum part based on which key was pressed.</p>
             </div>
@@ -88,7 +88,7 @@
 
         <div class="col-md-4 hover-card" onclick="openProject('https://kenny-yeung.github.io/Doodle-Jump/')">
           <div class="card mb-4 shadow-sm">
-            <img src="images/doodlejump.png" alt="">
+            <img src="images/doodlejump.PNG" alt="Picture of Doodle Jump game">
             <div class="card-body">
               <p class="card-text">This is first game I made using HTML, CSS and Javascript. Its my attempt at making the popular mobile game "Doodle Jump!", just press play and use arrow keys to move left and right to jump
               on the platforms</p>
