--- a/portfolio.html
+++ b/portfolio.html
@@ -107,9 +107,7 @@
     <a class="footer-link" href="https://www.instagram.com/kenny_deshen/">Instagram</a>
     <p class = "copyright">© 2021 Kenny Yeung.</p>
   </div>
-<script src = "index.js">
-
-</script>
+<script src = "./index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 
